# Computer_Vision_Robot_Papuland

./: .gitignore  README.md  run_commands.txt  test.txt
MInichallenge2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
MInichallenge2/log/: latest_build
Minichallenge2/: errors.txt
Minichallenge2/src/mobile_robotics/: package.xml  setup.py
Minichallenge2/src/puzzlebot_minichallenge2/: package.xml  setup.cfg  setup.py
Minichallenge2/src/puzzlebot_minichallenge2/config/: params.yaml  path.yaml  path_config.yaml
Minichallenge2/src/puzzlebot_minichallenge2/launch/: puzzlebot_minichallenge2_launch.py  puzzlebot_minichallenge2_part1_launch.py  puzzlebot_minichallenge2_part2_launch.py  puzzlebot_minichallenge2_real_launch.py  puzzlebot_minichallenge2_sim_launch.py
Minichallenge2/src/puzzlebot_minichallenge2/msg/: PathPose.msg
Minichallenge2/src/puzzlebot_minichallenge2/puzzlebot_minichallenge2/: Controller.py  ControllerOdometry.py  Controller_path.py  PathController.py  PathGenerator.py  ground_truth_node.py  path_generator.py
Minichallenge3/: errors.txt
Minichallenge3/src/custom_interfaces/msg/: PathPose.msg
Minichallenge3/src/puzzlebot_minichallenge3/: package.xml  setup.cfg  setup.py
Minichallenge3/src/puzzlebot_minichallenge3/config/: error_groups.yaml  path.yaml
Minichallenge3/src/puzzlebot_minichallenge3/launch/: error1_launch.py  error2_launch.py  error3_launch.py  error4_launch.py  error5_launch.py  error6_launch.py  puzzlebot_minichallenge3_part1_launch.py  puzzlebot_minichallenge3_part2_launch.py
Minichallenge3/src/puzzlebot_minichallenge3/puzzlebot_minichallenge3/: Controller.py  ControllerSim.py  OdometryNode.py  OrientationComparator.py  PathController.py  PathGenerator.py  PathGeneratorErrors.py
Minichallenge4/src/custom_interfaces/: CMakeLists.txt
Minichallenge4/src/puzzlebot_minichallenge4/: package.xml  setup.cfg  setup.py
Minichallenge4/src/puzzlebot_minichallenge4/config/: path.yaml
Minichallenge4/src/puzzlebot_minichallenge4/launch/: camera_launch.py  puzzlebot_minichallenge3_part1_launch.py  puzzlebot_minichallenge4_home_launch.py  puzzlebot_minichallenge4_launch.py
Minichallenge4/src/puzzlebot_minichallenge4/puzzlebot_minichallenge4/: OdometryNode.py  PathController.py  PathControllerColors.py  PathGenerator.py  TrafficLightDetector.py
Minichallenge5/src/puzzlebot_minichallenge5/: setup.py
finalchallenge_ws/: requirements.txt
finalchallenge_ws/CNN/BaseModelTrafficLight/: TrainingBaseModel.py  data.yaml
finalchallenge_ws/CNN/TrafficLightPytorch/: FineTuneTrafficLightModel.py  README.dataset.txt  README.roboflow.txt  TestModel.py
finalchallenge_ws/CNN_Traffic_Light/: Keras_to_ONX.ipynb  TrafficLightCNN.ipynb
finalchallenge_ws/src/puzzlebot_finalchallenge/: package.xml  setup.cfg  setup.py
finalchallenge_ws/src/puzzlebot_finalchallenge/config/: paths.yaml
finalchallenge_ws/src/puzzlebot_finalchallenge/launch/: camera_launch.py  fuzzy_launch.py  odometry_launch.py  pc_launch.py  puzzlebot_finalchallenge_launch.py  puzzlebot_launch.py  puzzlebot_minichallenge5_launch.py
finalchallenge_ws/src/puzzlebot_finalchallenge/puzzlebot_finalchallenge/: ColorDetectorPP.py  Controller.py  ControllerPD.py  LineFollower.py  LineFollowerPP.py  LineFollowerReal.py  OdometryNode.py  PathFollower.py  TrafficLightDetector.py  TrafficLightImageTaker.py  TrafficSignalDetector.py  TrafficSignalImageTaker.py  ZebraDetection.py  color_filter.py
fuzzyController_ws/src/fuzzycontroller/: package.xml  setup.cfg  setup.py
fuzzyController_ws/src/fuzzycontroller/config/: params.yaml
fuzzyController_ws/src/fuzzycontroller/fuzzycontroller/: ControllerFuzzy.py  LineFollower.py
fuzzyController_ws/src/fuzzycontroller/launch/: fuzzy_launch.py
(+54 files in other folders)
