<!-- Proyecto: Puzzlebot Final Challenge - package.xml                          -->
<!-- Materia: Implementación de Robótica Inteligente                            -->
<!-- Fecha: 14 de junio de 2025                                                 -->
<!-- Alumnos:                                                                   -->
<!--   - Jonathan Arles Guevara Molina  | A01710380                             -->
<!--   - Ezzat Alzahouri Campos         | A01710709                             -->
<!--   - José Ángel Huerta Ríos         | A01710607                             -->
<!--   - Ricardo Sierra Roa             | A01709887                             -->

<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>puzzlebot_finalchallenge</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="papuland@todo.com">papuland</maintainer>
  <license>TODO: License declaration</license>

  <!-- Dependencias del paquete -->
  <depend>rclpy</depend>  <!-- Dependencia para trabajar con ROS 2 en Python -->
  <depend>std_msgs</depend>  <!-- Dependencia para mensajes estándar en ROS 2 -->
  <depend>geometry_msgs</depend>


  <!-- Dependencias nuevas para inferencia con ONNX y OpenCV -->
  <exec_depend>opencv</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>ultralytics</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <!-- Dependencias para generar mensajes personalizados -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>ament_index_python</exec_depend>


  <!-- Dependencias para pruebas -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>custom_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
